k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-user-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: internRFC.com
    http:
      paths:
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: project-user-service
            port:
              number: 80
